name:                fetch-alex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pdmetcalfe/fetch-alex
license:             BSD3
license-file:        LICENSE
author:              Paul Metcalfe
maintainer:          paul.metcalfe@gmail.com
copyright:           2018 Paul Metcalfe
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fetch-alex
  hs-source-dirs:      src
  ghc-options:         -Wall -O3 -threaded -rtsopts
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Http
                     , Semaphore
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , exceptions
                     , http-conduit
                     , http-client
                     , html-conduit
                     , xml-conduit
                     , resourcet
                     , mtl
                     , conduit
                     , conduit-extra
                     , network-uri
                     , text
                     , async
                     , directory
                     , transformers
                     , transformers-base
                     , http-types

